--- a/src/scss/Tags.module.scss
+++ b/src/scss/Tags.module.scss
@@ -8,13 +8,11 @@
 
 .TagBox {
     width: fit-content;
-    height: fit-content;
+    height: 22px;
     padding: v.$spacing-xx-sm v.$spacing-x-sm;
     border-radius: v.$radius-xx-sm;
-    font-size: v.$fontSize-x-sm;
-    font-weight: v.$fontWeight-M;
-    line-height: v.$lineHeight-sm;
     text-transform: capitalize;
+    white-space: nowrap;
     color: #FFFFFF;
     background-color: #2D4553;
 }
